added tests for interterminal pathfinding